--- a/i18n/bulkimport.properties
+++ b/i18n/bulkimport.properties
@@ -1,8 +1,10 @@
 admin.menu.title=Bulk import
 admin.page.title=Bulk import
 admin.page.subtitle=Bulk import your CMS data here.
-admin.page.processImport=Processing import
-admin.page.website_user=Bulk import website user.
+admin.page.processImportData=Processing import
+
+admin.page.website_user=Bulk import website user
+admin.page.page=Bulk import page
 
 import.btn=Import
 back.btn=Back to object selection
